# vault_app

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle  local.properties  settings.gradle
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  moiton_detector.dart  providers.dart  router_provider.dart  settings_model.dart
lib/pages/: album.dart  album.dart.bck  collections.dart  collections.dart.bck  data.dart  intro.dart  password.dart  photo.dart  photo.dart.bck  settings.dart  setup.dart
lib/themes/: dark_theme.dart  light_theme.dart
lib/utils/: auth_serrvices.dart  cutom_photo_view.dart  file_api_wrapper.dart  filename.dart
lib/widget/: appbar.dart  menu_item.dart  pin_dialog.dart  touchable.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: encryption.rs  error.rs  file.rs  mod.rs
rust/src/utils/: cache.rs  encryption.rs  error.rs  mod.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_Vault.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_Vault.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html
windows/flutter/: generated_plugin_registrant.cc  (+1 more)
(+24 files in other folders)
