[package]
name = "rust_lib_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"

aes = "0.7"                # AES encryption
block-modes = "0.8"        # Block cipher modes (e.g., CBC mode)
rand = "0.8"               # For generating random IV
# hex = "0.4"                # Optional: For easier handling of binary data as hex


pbkdf2 = "0.12.2"          # For password generation
sha2 = "0.10.2"

lazy_static = "1.4.0"
zeroize = { version = "1.5", features = ["zeroize_derive"] }

# fast-blurhash = "1.0.1"
image = "0.25.2"
blurhash = "0.2.1"

# sled = "0.34.7"

chrono = "0.4.38"


# wasm support
getrandom = { version = "0.2", features = ["js"] }
